@@ -5,7 +5,6 @@ GenericName=XG Editor
 GenericName[fr]=Éditeur XG
 Comment=QXGEdit is a Qt GUI XG editor application
 Comment[fr]=Interface graphique d'édition XG
-Keywords=midi;sysex;editor;
 Exec=@ac_prefix@/bin/qxgedit
 Icon=qxgedit
 Categories=Audio;AudioVideo;Midi;X-Alsa;Qt;
