@@ -4,6 +4,12 @@ QXGEdit - Qt XG Editor
 ChangeLog
 
 
+GIT HEAD
+
+- Remove extra 'Keywords' entry and fix spelling (patches by
+  Jaromír Mikeš, thanks).
+
+  
 0.4.1  2016-09-14  End of Summer'16 release.
 
 - Dropped the --enable-qt5 from configure as found redundant
